<resources>
  <string name="app_name">My App Portfolio</string>

  <string name="my_title">My Nanodegree Apps!</string>
  <string name="media_streamer">Spotify streamer</string>
  <string name="super_duo1">Scores app</string>
  <string name="super_duo2">Library app</string>
  <string name="ant_terminator">Build it bigger</string>
  <string name="materialize">XYZ reader</string>
  <string name="capstone">Capstone: my own app</string>
  <string name="action_settings">Settings</string>
</resources>
