<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity"
                android:background="#FFDFEAF1">

  <TextView
      android:text="@string/my_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:layout_centerHorizontal="true"
      android:textStyle="bold"
      android:textColor="#000000"
      android:textAllCaps="false"
      android:id="@+id/textView"/>

  <Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/media_streamer"
      android:id="@+id/button"
      android:layout_below="@+id/textView"
      android:layout_alignStart="@+id/textView"
      android:layout_marginTop="37dp"
      android:layout_alignEnd="@+id/textView"
      android:textSize="10dp"
      android:textStyle="bold"
      android:textColor="#000000"
      android:textAllCaps="true"
      android:background="#F08C35"
      android:onClick="onClick"/>

  <Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="5dp"
      android:text="@string/super_duo1"
      android:id="@+id/button2"
      android:layout_below="@+id/button"
      android:textStyle="bold"
      android:textColor="#000000"
      android:textAllCaps="true"
      android:background="#F08C35"
      android:layout_alignStart="@+id/button"
      android:layout_alignEnd="@+id/button"
      android:textSize="10dp"
      android:onClick="onClick"/>

  <Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="5dp"
      android:text="@string/super_duo2"
      android:id="@+id/button3"
      android:layout_below="@+id/button2"
      android:textSize="10dp"
      android:textStyle="bold"
      android:textColor="#000000"
      android:textAllCaps="true"
      android:background="#F08C35"
      android:layout_alignStart="@+id/button2"
      android:layout_alignEnd="@+id/button2"
      android:onClick="onClick"/>

  <Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="5dp"
      android:text="@string/ant_terminator"
      android:id="@+id/button4"
      android:layout_below="@+id/button3"
      android:textSize="10dp"
      android:textStyle="bold"
      android:textColor="#000000"
      android:textAllCaps="true"
      android:background="#F08C35"
      android:layout_alignStart="@+id/button3"
      android:layout_alignEnd="@+id/button3"
      android:onClick="onClick"/>

  <Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="5dp"
      android:text="@string/materialize"
      android:id="@+id/button5"
      android:layout_below="@+id/button4"
      android:textSize="10dp"
      android:textStyle="bold"
      android:textColor="#000000"
      android:textAllCaps="true"
      android:background="#F08C35"
      android:layout_alignStart="@+id/button4"
      android:layout_alignEnd="@+id/button4"
      android:onClick="onClick"/>

  <Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="5dp"
      android:text="@string/capstone"
      android:id="@+id/button6"
      android:layout_below="@+id/button5"
      android:textSize="10dp"
      android:textStyle="bold"
      android:textColor="#FFFFFF"
      android:textAllCaps="true"
      android:background="#FF0000"
      android:layout_alignStart="@+id/button5"
      android:layout_alignEnd="@+id/button5"
      android:onClick="onclick"/>

</RelativeLayout>
